# hierarchical-forecast-reconciliation-with-uncertainty-quantification

./: .gitignore  FILES_ADDED.txt  FINAL_QUALITY_PASS_SUMMARY.md  FINAL_REPORT.md  IMPROVEMENTS_COMPLETED.md  QUALITY_CHECKLIST.md  QUALITY_ENHANCEMENTS_SUMMARY.md  QUALITY_IMPROVEMENTS_REPORT.md  QUICK_REFERENCE.txt  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: results.json  results_summary.json
scripts/: evaluate.py  generate_synthetic_data.py  predict.py  train.py
src/hierarchical_forecast_reconciliation_with_uncertainty_quantification/: __init__.py
src/hierarchical_forecast_reconciliation_with_uncertainty_quantification/data/: __init__.py  loader.py  preprocessing.py
src/hierarchical_forecast_reconciliation_with_uncertainty_quantification/evaluation/: __init__.py  metrics.py
src/hierarchical_forecast_reconciliation_with_uncertainty_quantification/models/: __init__.py  model.py
src/hierarchical_forecast_reconciliation_with_uncertainty_quantification/training/: __init__.py  trainer.py
src/hierarchical_forecast_reconciliation_with_uncertainty_quantification/utils/: __init__.py  config.py  config_schema.py  logging_utils.py  type_validation.py
tests/: __init__.py  conftest.py  test_data.py  test_enhanced_error_handling.py  test_model.py  test_model_validation.py  test_training.py
