[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hierarchical-forecast-reconciliation-with-uncertainty-quantification"
version = "0.1.0"
description = "Hierarchical forecast reconciliation with uncertainty quantification using ensemble forecasters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Research Team", email = "research@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.12.0",
    "pytorch-forecasting>=0.10.0",
    "darts>=0.22.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.1.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "mlflow>=1.28.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "sktime>=0.13.0",
    "properscoring>=0.1",
    "scipy>=1.8.0",
    "optuna>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"